@@ -154,13 +154,11 @@ class Revelation(ui.App):
 		"Sets up the UI"
 
 		# set window icons
-		if self.items.theme.has_icon("revelation"):
-			gtk.window_set_default_icon_list(
-				self.items.load_icon("revelation", 48),
-				self.items.load_icon("revelation", 32),
-				self.items.load_icon("revelation", 24),
-				self.items.load_icon("revelation", 16)
-			)
+		pixbufs = [ self.items.load_icon("revelation", size) for size in ( 48, 32, 24, 16) ]
+		pixbufs = [ pixbuf for pixbuf in pixbufs if pixbuf != None ]
+
+		if len(pixbufs) > 0:
+			gtk.window_set_default_icon_list(*pixbufs)
 
 		# load UI definitions
 		self.uimanager.add_actions_from_file(config.DIR_UI + "/actions.xml")
